Mudanças não especificadas (Código Incorreto)

--- a/html/index.html
+++ b/html/index.html
@@ -17,18 +17,15 @@
             <th><a href="../html/outros.html"><b>Outros</b></th>
         </tr>
     </table>
-    <!-- <table border="3" id="instituicao">
-        <tr>
-            <th colspan="2"><a href="https://www2.ifal.edu.br/"><b>INSTITUTO FEDERAL DE ALAGOAS</b></a></th>
-        </tr>
-    </table> -->
-    <div class="fotos">
-        <img src="../img/FOTODANILO.jpeg" alt="dan">
-        <span>@eudaanilo</span>
-    </div>
-    <div class="fotos">  
-        <img src="../img/IMAGEMTHAILANE.jpg"alt="thay" >
-        <span>@thaai_._</span>
+    <div class="divmaior">
+        <div class="fotodan">
+            <img src="../img/FOTODANILO.jpeg" alt="dan">
+            <span>@eudaanilo</span>
+        </div>
+        <div class="fotothay">  
+            <img src="../img/IMAGEMTHAILANE.jpg"alt="thay" >
+            <span>@thaai_._</span>
+        </div>
     </div>
 </body>
 </html>
