Falta alinhar as duas fts, q até agr não consegui.

--- a/html/index.html
+++ b/html/index.html
@@ -18,13 +18,11 @@
         </tr>
     </table>
     <div class="divmaior">
-        <div class="fotodan">
-            <img src="../img/FOTODANILO.jpeg" alt="dan">
-            <span>@eudaanilo</span>
+        <div class="fotos">
+            <img src="../img/FOTODAN2.jpg" alt="dan" style="width:50%">
         </div>
-        <div class="fotothay">  
-            <img src="../img/IMAGEMTHAILANE.jpg"alt="thay" >
-            <span>@thaai_._</span>
+        <div class="fotos">  
+            <img src="../img/FOTOTHAY.jpg"alt="thay" style="width:50%">
         </div>
     </div>
 </body>
