Algumas mods em classes e ids mas o erro continua

--- a/html/index.html
+++ b/html/index.html
@@ -10,20 +10,31 @@
     </style>
 </head>
 <body class="gradient">
-    <table border="3">
+    <table id="menu" border="3">
         <tr>
             <th><a href="../html/index.html"><b>Início</b></a></th>
             <th><a href="../html/curriculo.html"><b>Currículo</b></th>
             <th><a href="../html/outros.html"><b>Outros</b></th>
         </tr>
     </table>
-    <div class="divmaior">
-        <div class="fotos">
-            <img src="../img/FOTODAN2.jpg" alt="dan" style="width:50%">
+    <div class="divfotos">
+        <div class="fotos1">
+            <img src="../img/FOTODAN2.jpg" alt="dan">
         </div>
-        <div class="fotos">  
-            <img src="../img/FOTOTHAY.jpg"alt="thay" style="width:50%">
+        <div class="fotos2">  
+            <img src="../img/FOTOTHAY.jpg"alt="thay">
         </div>
+    </div>
+    <div class="info">
+        <table id="info">
+            <tr>
+                <th id="dan"><i>DANILO</i></th>
+                <th id="ta">THAILANE</th>
+            </tr>
+            <tr>
+                <th>Informações</th>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
