--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/LOGOIFAL.png" type="image/x-icon">
     <title>Trabalho PWEB</title>
     <link rel="stylesheet" href="../css/estiloindex.css">
     <style>
     </style>
 </head>
 <body class="gradient">
+
     <table id="menu" border="3">
         <tr>
             <th><a href="../html/index.html"><b>Início</b></a></th>
@@ -17,6 +19,7 @@
             <th><a href="../html/outros.html"><b>Outros</b></th>
         </tr>
     </table>
+
     <div class="divfotos">
         <div class="fotos1">
             <img src="../img/FOTODAN2.jpg" alt="dan">
@@ -25,6 +28,7 @@
             <img src="../img/FOTOTHAY.jpg"alt="thay">
         </div>
     </div>
+
     <div class="info">
         <table id="info">
             <tr>
@@ -36,5 +40,20 @@
             </tr>
         </table>
     </div>
+
+    <div class="redes">
+        <table>
+            <tr>
+                <th><p><img src="../img/LOGOINSTA.png" alt="LOGOINSTA"></p></th>
+                <th><p><img src="../img/LOGOGIT.png" alt="LOGOGIT"></p></th>
+            </tr>
+        </table>
+
+    </div>
+
+    <footer>
+        <p>Copyright &copy; 2022 - Danilo and Maria, Instituto Federal de Alagoas. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
