--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../img/LOGOIFAL.png" type="image/x-icon">
     <title>Trabalho PWEB</title>
     <link rel="stylesheet" href="../css/estiloindex.css">
+    <script src="../js/script.js"></script>
     <style>
     </style>
 </head>
