mudança no curriculo

--- a/html/curriculo.html
+++ b/html/curriculo.html
@@ -11,4 +11,26 @@
     <a href="index.html">Voltar</a>
     
 </body>
+<table border="1">
+    <tr>
+        <th>Curriculo Danilo Alves</th>
+    </tr>
+    <tr>
+        <td>Danilo Alves
+            (dsa7@aluno.ifal.edu.br)
+        </td>
+        <td>Av. Gov Lamenha Filho,356-Feitosa
+        </td>
+    </tr>
+    <tr>
+        <td>Qualidades</td>
+        <td>Facilidade para programar em SQL</td>
+    </tr>
+    <tr>
+        <td>Histórico profissional</td>
+        <td>Cursando Des. de Sistemas Ifal</td>
+        <br>Operador de Computador</br>
+    </tr>
+
+</table>
 </html>
