Adição de outras tabelas em outros arquivos.

--- a/html/curriculo.html
+++ b/html/curriculo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,65 @@
     <title>Currículo</title>
     <link rel="stylesheet" href="../css/estilocurriculo.css">
 </head>
-<body>
-    <a href="index.html">Voltar</a>
-    
+<body class="gradient">
+    <table id="menu" border="3">
+        <tr>
+            <th><a href="../html/index.html"><b>Início</b></a></th>
+            <th><a href="../html/curriculo.html"><b>Currículo</b></th>
+            <th><a href="../html/outros.html"><b>Outros</b></th>
+        </tr>
+    </table>
+    <table id="infodan" border="1">
+        <tr>
+            <th>Curriculo Danilo Alves</th>
+        </tr>
+        <tr>
+            <td>Danilo Alves
+                (dsa7@aluno.ifal.edu.br)
+            </td>
+            <td>Av. Gov Lamenha Filho,356-Feitosa
+            </td>
+        </tr>
+        <tr>
+            <td>Qualidades</td>
+            <td>Facilidade para programar em SQL</td>
+        </tr>
+        <tr>
+            <td>Histórico profissional</td>
+            <td>Analista de Sistemas</td>
+        </tr>
+        <tr>
+            <td>Cursos</td>
+            <td>Operador de Computador<p></p> Desenvolvimento de Sistemas<p></p> Assistente de Recursos Humanos<p></p> FrameWork: React Native</td>
+        </tr>
+    </table>
+    <table>
+        <table id="infothai" border="2">
+            <tr>
+                <th>Curriculo Maria Thailane</th>
+            </tr>
+            <tr>
+                <td>Maria Thailane
+                    (mttb1@aluno.ifal.edu.br)
+                </td>
+                <td>Trav. Santa Terezinha,29-Jacintinho 
+                </td>
+            </tr>
+            <tr>
+                <td>Qualidades</td>
+                <td>Facilidade em Manuntenção de Computadores</td>
+            </tr>
+            <tr>
+                <td>Histórico Profissional</td>
+                <td>Técnica em Informática - CBTU</td>
+            </tr>
+            <tr>
+                <td>Cursos</td>
+                <td>Markenting Pessoal<p></p> Desenvolvimento de Sistemas<p></p> FrameWork: Flutter</td>
+            </tr>
+    </table>
+    <footer>
+        <p>Copyright &copy; 2022 - Danilo and Maria, Instituto Federal de Alagoas. All rights reserved.</p>
+    </footer>
 </body>
 </html>
