--- a/html/outros.html
+++ b/html/outros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +7,47 @@
     <title>Outros</title>
     <link rel="stylesheet" href="../css/estilooutros.css">
 </head>
-<body>
-    <a href="index.html">Voltar</a>
+<body class="gradient">
+    <table id="menu" border="3">
+        <tr>
+            <th><a href="../html/index.html"><b>Início</b></a></th>
+            <th><a href="../html/curriculo.html"><b>Currículo</b></th>
+            <th><a href="../html/outros.html"><b>Outros</b></th>
+        </tr>
+    </table>
+    <h2>Áreas de Atuação</h2>
+    <ul>
+        <li>
+            Banco de Dados
+        </li>
+        <li>
+            Manuntenção de Computadores
+        </li>
+        <li>
+            Programação Orientado a Objetos
+        </li>
+        <li>
+            Sistemas Operacionais e Redes
+        </li>
+        <li>
+            HTML,CSS & JAVASCRIPT
+        </li>
+    </ul>
+    <h2>Qual é a média salarial?</h2>
+    <h3>Desenvolvedor de Sistemas</h3>
+    <ul>
+        <li>
+            R$ 3.113,00
+        </li>
+    </ul>
+    <h3>Analista de Sistemas</h3>
+    <ul>
+        <li>
+            R$ 5.116,00
+        </li>
+    </ul>
+    <footer>
+        <p>Copyright &copy; 2022 - Danilo and Maria, Instituto Federal de Alagoas. All rights reserved.</p>
+    </footer>
 </body>
 </html>
