Mesclando células dos nomes dos alunos.

--- a/html/curriculo.html
+++ b/html/curriculo.html
@@ -17,7 +17,7 @@
     </table>
     <table id="infodan" border="1">
         <tr>
-            <th>Curriculo Danilo Alves</th>
+            <th colspan="2">Danilo da Silva Alves</th>
         </tr>
         <tr>
             <td>Danilo Alves
@@ -42,7 +42,7 @@
     <table>
         <table id="infothai" border="2">
             <tr>
-                <th>Curriculo Maria Thailane</th>
+                <th colspan="2">Maria Thailane Teixeira Balbino</th>
             </tr>
             <tr>
                 <td>Maria Thailane
