Adicionado os rodapés, algumas images.

--- a/html/curriculo.html
+++ b/html/curriculo.html
@@ -15,7 +15,15 @@
             <th><a href="../html/outros.html"><b>Outros</b></th>
         </tr>
     </table>
-    <table id="infodan" border="1">
+    <div class="divfotos">
+        <div class="fotos1">
+            <img src="../img/FOTODAN2.jpg" alt="dan">
+        </div>
+        <div class="fotos2">  
+            <img src="../img/FOTOTHAY.jpg"alt="thay">
+        </div>
+    </div>
+    <table id="infodan" border="2">
         <tr>
             <th colspan="2">Danilo da Silva Alves</th>
         </tr>
@@ -27,8 +35,8 @@
             </td>
         </tr>
         <tr>
-            <td>Qualidades</td>
-            <td>Facilidade para programar em SQL</td>
+            <td>Habilidades</td>
+            <td>Programar em SQL</td>
         </tr>
         <tr>
             <td>Histórico profissional</td>
@@ -52,8 +60,8 @@
                 </td>
             </tr>
             <tr>
-                <td>Qualidades</td>
-                <td>Facilidade em Manuntenção de Computadores</td>
+                <td>Habilidades</td>
+                <td>Manuntenção de Computadores</td>
             </tr>
             <tr>
                 <td>Histórico Profissional</td>
@@ -61,7 +69,7 @@
             </tr>
             <tr>
                 <td>Cursos</td>
-                <td>Markenting Pessoal<p></p> Desenvolvimento de Sistemas<p></p> FrameWork: Flutter</td>
+                <td>Markenting Pessoal<p></p> Tec. Informática p/ Internet <p></p> Desenvolvimento de Sistemas<p></p> FrameWork: Flutter</td>
             </tr>
     </table>
     <footer>
