--- a/html/outros.html
+++ b/html/outros.html
@@ -15,7 +15,10 @@
             <th><a href="../html/outros.html"><b>Outros</b></th>
         </tr>
     </table>
-    <h2>Áreas de Atuação</h2>
+    <div id="fotodevsis">
+        <img src="../img/IMAGEMDESEVOLVENDOSISTEMA.png" alt="">
+    </div>
+    <h2 border="double">Áreas de Atuação</h2>
     <ul>
         <li>
             Banco de Dados
@@ -47,7 +50,10 @@
         </li>
     </ul>
     <footer>
-        <p>Copyright &copy; 2022 - Danilo and Maria, Instituto Federal de Alagoas. All rights reserved.</p>
+        <div id="rodape">
+            <p>Copyright &copy; 2022 - Danilo and Maria, Instituto Federal de Alagoas. All rights reserved.</p>
+            <p><a href="../html/curriculo.html"><b><u>Currículo</u></b></p>
+        </div>
     </footer>
 </body>
 </html>
