Finalização para envio para o professor.

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,6 @@
     </style>
 </head>
 <body class="gradient">
-
     <table id="menu" border="3">
         <tr>
             <th><a href="../html/index.html"><b>Início</b></a></th>
@@ -20,7 +19,6 @@
             <th><a href="../html/outros.html"><b>Outros</b></th>
         </tr>
     </table>
-
     <div class="divfotos">
         <div class="fotos1">
             <img src="../img/FOTODAN2.jpg" alt="dan">
@@ -29,28 +27,22 @@
             <img src="../img/FOTOTHAY.jpg"alt="thay">
         </div>
     </div>
-
-    <div class="info">
-        <table id="info">
-            <tr>
-                <th id="dan"><i>DANILO</i></th>
-                <th id="ta">THAILANE</th>
-            </tr>
-            <tr>
-                <th>Informações</th>
-            </tr>
-        </table>
+    <div>
+        <ul class="info">
+            <li id="infodan">DANILO</li>
+            <li id="infothay">THAILANE</li>
+        </ul>
     </div>
-
     <div class="redes">
-        <table>
-            <tr>
-                <th><p><img src="../img/LOGOINSTA.png" alt="LOGOINSTA"></p></th>
-                <th><p><img src="../img/LOGOGIT.png" alt="LOGOGIT"></p></th>
-            </tr>
-        </table>
+        <ul id="danilo" class="change">
+            <li class="align"><img src="../img/LOGOINSTA.png" class="separacaofoto" alt="LOGOINSTA"><a href="https://instagram.com/eudaanilo?igshid=YmMyMTA2M2Y="><p>@eudaanilo</p></a></li>
+            <li class="align"><img src="../img/LOGOGIT.png" class="separacaofoto" alt="LOGOGIT"><a href="https://github.com/eudaanilo"><p>eudaanilo</p></a></li>
+        </ul>
+        <ul id="thay" class="change">
+            <li class="align"><img src="../img/LOGOINSTA.png" class="separacaofoto" alt="LOGOINSTA"><a href="https://instagram.com/thaai_._?igshid=YmMyMTA2M2Y="><p>@thaai_._</p></a></li>
+            <li class="align"><img src="../img/LOGOGIT.png" class="separacaofoto" alt="LOGOGIT"> <a href="https://github.com/Mthailane">Mthailane</a></li>
+        </ul>
     </div>
-
     <footer>
         <p>Copyright &copy; 2022 - Danilo and Maria, Instituto Federal de Alagoas. All rights reserved.</p>
     </footer>
