--- a/html/outros.html
+++ b/html/outros.html
@@ -38,22 +38,24 @@
         </li>
     </ul>
     <h2>Qual é a média salarial?</h2>
-    <h3>Desenvolvedor de Sistemas</h3>
-    <ul>
-        <li>
-            R$ 3.113,00
-        </li>
-    </ul>
-    <h3>Analista de Sistemas</h3>
-    <ul>
-        <li>
-            R$ 5.116,00
-        </li>
-    </ul>
+    <div id="listas">
+        <h3>Desenvolvedor de Sistemas</h3>
+        <ul>
+            <li>
+                R$ 3.113,00
+            </li>
+        </ul>
+        <h3>Analista de Sistemas</h3>
+        <ul>
+            <li>
+                R$ 5.116,00
+            </li>
+        </ul>
+    </div>
     <footer>
         <div id="rodape">
             <p>Copyright &copy; 2022 - Danilo and Maria, Instituto Federal de Alagoas. All rights reserved.</p>
-            <p><a href="../html/curriculo.html"><b><u>Currículo</u></b></p>
+            <p><a href="../html/index.html"><b><u>Página Inicial</u></b></p>
         </div>
     </footer>
 </body>
